updated image upscale
